tests/expectations/compiler/scalar/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'scalar'
    --> compiler-test:4:13
     |
   4 |   let f = 1 scalar;
     |             ^^^^^^
